index: filled-in parisian hot chocolate
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -1734,7 +1734,7 @@
                     </div>
                     <div class = 'recipe'>
                         <div class = 'recipehdr'>
-                            <img src = './img/food/sweet/hotcocoa.jpg' />
+                            <img src = './img/food/sweet/hot-chocolate.png' />
                             <div>
                                 <h1> Parisian Hot Chocolate </h1>
                                 <p>
@@ -1747,9 +1747,39 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> 1 cup Whole Milk </li>
+                                <li> ½ cup Heavy Cream </li>
+                                <li> 115g Dark Chocolate (get good stuff like Ghirardelli) </li>
+                                <li> 1 tbsp Sugar </li>
+                                <li> ¼ tsp Vanilla </li>
+                                <li> Pinch of Sea Salt </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Mix
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Heat milk and cream in a sauce pan until hot but
+                                            not quite boiling
+                                        </li>
+                                        <li>
+                                            Add chocolate slowly and stir until fully melted
+                                            and smooth
+                                        </li>
+                                        <li> Simmer for 3-5 min on low, whisking constantly </li>
+                                        <li> Add sugar, salt, and vanilla </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Serve
+
+                                    <ol type = 'a'>
+                                        <li> Pour into mugs hot </li>
+                                        <li> Add marshmellows (optional) </li>
+                                    </ol>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
