index: filled-in ginger bug recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -2186,9 +2186,72 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> 1 Ginger Root (organic, so skin has wild yeast) </li>
+                                <li> 2 cups Spring Water (Dechlorinated) </li>
+                                <li> many tbsp Sugar </li>
+                                <li>
+                                    1 bottle Juice (no preservatives and needs sugar). Grape tastes
+                                    great with the ginger flavor (which will persist slightly)
+                                </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Create Ginger Bug
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Grate off 3 tbsp of ginger and place in a 32-oz jar
+                                        </li>
+                                        <li> Add the sugar to the jar </li>
+                                        <li> Fill with the water </li>
+                                        <li> Cover with dish cloth and rubber band top </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Feed the Ginger Bug
+
+                                    <ol type = 'a'>
+                                        <li> Remove top from jar </li>
+                                        <li> Add 1 tbsp grated ginger and 1 tbsp sugar </li>
+                                        <li> Mix well </li>
+                                        <li> Reseal </li>
+                                        <li>
+                                            Repeat for 5+ days until the mixture begins to be fizzy
+                                        </li>
+                                        <li>
+                                            Once it is fizzy, it is ready to use. Place in fridge
+                                            and change to feeding weekly, not daily
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Make Soda
+
+                                    <li>
+                                        Pour out and strain through a filter ¼ cup of the
+                                        ginger-bug-water mixture into a desanitized, pressure-safe
+                                        bottle
+                                    </li>
+                                    <li>
+                                        Pour your juice into the bottle, leaving about 2 inches
+                                        (the bottle neck) free
+                                    </li>
+                                    <li>
+                                        Let sit at room temp in a dark area for 1-2 days
+                                    </li>
+                                    <li>
+                                        Place in the fridge for at least an hour to prevent
+                                        explosions
+                                    </li>
+                                    <li>
+                                        Take out of the fridge when ready to drink, place palm
+                                        on top of bottle with light pressure, and slowly open the
+                                        bottle. If not careful, it can come off very forcefully and
+                                        spray everywhere.
+                                    </li>
+                                    <li> Pour into a glass </li>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
