index: fix ginger-bug formatting
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -2228,29 +2228,31 @@
                                 <li>
                                     Make Soda
 
-                                    <li>
-                                        Pour out and strain through a filter ¼ cup of the
-                                        ginger-bug-water mixture into a desanitized, pressure-safe
-                                        bottle
-                                    </li>
-                                    <li>
-                                        Pour your juice into the bottle, leaving about 2 inches
-                                        (the bottle neck) free
-                                    </li>
-                                    <li>
-                                        Let sit at room temp in a dark area for 1-2 days
-                                    </li>
-                                    <li>
-                                        Place in the fridge for at least an hour to prevent
-                                        explosions
-                                    </li>
-                                    <li>
-                                        Take out of the fridge when ready to drink, place palm
-                                        on top of bottle with light pressure, and slowly open the
-                                        bottle. If not careful, it can come off very forcefully and
-                                        spray everywhere.
-                                    </li>
-                                    <li> Pour into a glass </li>
+                                    <ol type = 'a'>
+                                        <li>
+                                            Pour out and strain through a filter ¼ cup of the
+                                            ginger-bug-water mixture into a desanitized,
+                                            pressure-safe bottle
+                                        </li>
+                                        <li>
+                                            Pour your juice into the bottle, leaving about 2 inches
+                                            (the bottle neck) free
+                                        </li>
+                                        <li>
+                                            Let sit at room temp in a dark area for 1-2 days
+                                        </li>
+                                        <li>
+                                            Place in the fridge for at least an hour to prevent
+                                            explosions
+                                        </li>
+                                        <li>
+                                            Take out of the fridge when ready to drink, place palm
+                                            on top of bottle with light pressure, and slowly open
+                                            the bottle. If not careful, it can come off very
+                                            forcefully and spray everywhere.
+                                        </li>
+                                        <li> Pour into a glass </li>
+                                    </ol>
                                 </li>
                                 <li> Enjoy! </li>
                             </ol>
