index: filled-out braggot recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -2144,9 +2144,72 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> 14 oz Light Malt Extract (Barley) </li>
+                                <li> 14 oz Raw Honey </li>
+                                <li> 0.2 oz Hops </li>
+                                <li> 2-3g US-05 Yeast </li>
+                                <li> 1 gal Spring Water </li>
+                                <li> 6-8 Carbonation Pellets </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Create Wort
+
+                                    <ol type = 'a'>
+                                        <li> Sanitize all equipment </li>
+                                        <li> Heat 0.5 gal of watter in a large stock pot </li>
+                                        <li>
+                                            Dissolve the malt extract and bring to a boil.
+                                            Be warned, it can boil over, so be prepared to quickly
+                                            take off heat to stop or to clean up
+                                        </li>
+                                        <li> Add 0.2 oz hops </li>
+                                        <li> Boil for 30 minutes </li>
+                                        <li> Cool to below 100 ⁰F </li>
+                                        <li> Warm up your honey and mix in well </li>
+                                        <li>
+                                            Pour into your fermentation jar, add more spring water
+                                            up to 1 gal, and mix well
+                                        </li>
+                                        <li>
+                                            The specific gravity should be 1.070 (which will
+                                            yield a final ABV of 10%)
+                                        </li>
+                                        <li>
+                                            Add a tablespoon of yeast nutrient and mix, followed by
+                                            the yeast, which you should sprinkle on top.
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Ferment
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Seal jar with an airlock and wait 2 weeks to a month
+                                        </li>
+                                        <li>
+                                            Once specific gravity has stabilized (should reach
+                                            1.000), you are ready to bottole
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Bottle and Carbonate
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Siphon your braggot into sanitized pressure-safe bottles
+                                        </li>
+                                        <li> Drop one carbonation pellet in and seal </li>
+                                        <li> Wait 2 weeks for carbonation </li>
+                                        <li>
+                                            Chill in fridge for an hour before drinking to reduce
+                                            pressure
+                                        </li>
+                                    </ol>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
