index: filled in cotton candy wine recipe
Signed-off-by: Dylan Turner <dylan.turner@tutanota.com>

--- a/index.html
+++ b/index.html
@@ -2148,6 +2148,7 @@
                                 <li> 14 oz Raw Honey </li>
                                 <li> 0.2 oz Hops </li>
                                 <li> 2-3g US-05 Yeast </li>
+                                <li> 1 tspn Yeast Nutrient </li>
                                 <li> 1 gal Spring Water </li>
                                 <li> 6-8 Carbonation Pellets </li>
                             </ul>
@@ -2177,7 +2178,7 @@
                                             yield a final ABV of 10%)
                                         </li>
                                         <li>
-                                            Add a tablespoon of yeast nutrient and mix, followed by
+                                            Add the yeast nutrient and mix, followed by
                                             the yeast, which you should sprinkle on top.
                                         </li>
                                     </ol>
@@ -2216,7 +2217,7 @@
                     </div>
                     <div class = 'recipe'>
                         <div class = 'recipehdr'>
-                            <img src = './img/food/mead/cotton-candy.jpg' />
+                            <img src = './img/food/mead/cottoncandywine.jpg' />
                             <div>
                                 <h1> Cotton-Candy Pyment </h1>
                                 <p>
@@ -2228,9 +2229,93 @@
                         <div class = 'content'>
                             <p> Ingredients: </p>
                             <ul>
+                                <li> 6 lbs Red Seedless Grapes </li>
+                                <li> 2.5 lbs Cotton Candy Grapes </li>
+                                <li> 2.5 lbs Raw Honey </li>
+                                <li> 1 packet EC-1118 Yeast </li>
+                                <li> 1 tspn Yeast Nutrient </li>
+                                <li> ½ tspn Pectic Enzyme </li>
+                                <li>
+                                    1 crushed Campden tablet (or equivalent Potassium Metabisulfite)
+                                </li>
+                                <li> 1 tspn Bentonite Clay</li>
+                                <li> ½ tspn Potassium Sorbate </li>
                             </ul>
                             <p> Steps </p>
                             <ol>
+                                <li>
+                                    Create Must
+
+                                    <ol type = 'a'>
+                                        <li> Desanitize Equipment </li>
+                                        <li>
+                                            Wash, de-stem, and crush all grapes into juice and pulp
+                                            in a large pot. Pour into fermentation jar
+                                        </li>
+                                        <li> Warm honey and mix in well </li>
+                                        <li> Add in pectic enzyme </li>
+                                        <li> Measure specific gravity </li>
+                                        <li> Add in yeast nutrient </li>
+                                        <li>
+                                            Pitch yeast, following instructions on the bag,
+                                            followed by adding to the jar and stirring well
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Ferment
+
+                                    <ol type = 'a'>
+                                        <li> Seal jar with an airlock and place in a dark area </li>
+                                        <li>
+                                            Wait one day, then unseal and shake for several minutes
+                                            to release air. Reseal.
+                                        </li>
+                                        <li>
+                                            After 4 more days, unseal and shake again to release air
+                                            then reseal and put away.
+                                        </li>
+                                        <li>
+                                            After 20 more days, you should see it begin to clear up.
+                                            Once it is totally clear, check the final gravity.
+                                        </li>
+                                        <li>
+                                            When final gravity stabilizes (should reach 1.000),
+                                            you are ready to stabilize. Siphon into a new sanitized
+                                            jar
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Stabilize and Back Sweeten
+
+                                    <ol type = 'a'>
+                                        <li> Add Campden tablets to mead and stir well </li>
+                                        <li>
+                                            Follow instructions on bentonite clay to form a paste,
+                                            then add and mix well
+                                        </li>
+                                        <li> Wait one day </li>
+                                        <li> Add Potassium Sorbate and stir </li>
+                                        <li> Wait more days until mixture clears up again </li>
+                                        <li>
+                                            Slowly add sugar in 50g doses and stir until you raise
+                                            the specific gravity no higher than 1.010
+                                        </li>
+                                    </ol>
+                                </li>
+                                <li>
+                                    Bottle and Age
+
+                                    <ol type = 'a'>
+                                        <li>
+                                            Siphon into bottles and jars, avoiding any sediment
+                                        </li>
+                                        <li>
+                                            Drink then or age for 3 months or so for final flavors
+                                        </li>
+                                    </ol>
+                                </li>
                                 <li> Enjoy! </li>
                             </ol>
                         </div>
